--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pitching Checker</title>
+    <title>Pitching Analyzer | Home</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css">
     <link rel="stylesheet" href="style.css">
 </head> 
 <body>
     <div class="min-h-screen bg-gray-100 flex items-center justify-center">
         <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
-            <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Pitching Checker</h2>
+            <h2 class="text-2xl font-bold text-center text-gray-800 mb-6">Pitching Analyzer</h2>
             <form>
                 <div class="mb-4">
                     <label for="audio-upload" class="block text-gray-700 text-sm font-semibold mb-2">กรุณาอัพโหลดไฟล์เสียง</label>
@@ -22,7 +22,7 @@
                     hover:file:bg-violet-100" required>
                 </div>
                 <div class="text-center">
-                    <button class="bg-blue-500 hover:bg-blue-700 duration-300 text-white font-bold py-2 px-4 rounded-full" onclick="alert('Feature coming soon!')">
+                    <button class="bg-violet-500 hover:bg-violet-700 duration-300 text-white font-bold py-2 px-4 rounded-full" onclick="alert('Feature coming soon!')">
                         Analyze Pitch
                     </button>
                 </div>
